// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HardwareScalingStatus Renders with auth error: Auth Error 1`] = `
<ErrorPage
  error={null}
  instanceDetails={null}
  onDialogClose={[MockFunction]}
/>
`;

exports[`HardwareScalingStatus Renders with operation error: Operation error 1`] = `
<ErrorPage
  error={
    Object {
      "errorType": "Reshape",
      "errorValue": "Reshape operation failed",
    }
  }
  instanceDetails={
    Object {
      "acceleratorConfig": Object {
        "coreCount": "1",
        "type": "NVIDIA_TESLA_K80",
      },
      "machineType": "https://www.googleapis.com/compute/v1/projects/jupyterlab-interns-sandbox/zones/us-west1-b/machineTypes/e2-highmem-8",
      "name": "Test",
    }
  }
  onDialogClose={[MockFunction]}
/>
`;

exports[`HardwareScalingStatus Renders with restart error: Restart error 1`] = `
<ErrorPage
  error={
    Object {
      "errorType": "Start",
      "errorValue": Promise {},
    }
  }
  onDialogClose={[MockFunction]}
/>
`;

exports[`HardwareScalingStatus Renders with stop error: Stop instance error 1`] = `
<ErrorPage
  error={
    Object {
      "errorType": "Stop",
      "errorValue": "Stop operation failed",
    }
  }
  instanceDetails={null}
  onDialogClose={[MockFunction]}
/>
`;

exports[`HardwareScalingStatus Runs through reshaping flow: Authorizing 1`] = `
<div
  className="containerPadding_f1ms73ho"
>
  <div
    className="containerSize_fjiu9nv"
  >
    <p
      className="heading_f1xburhd"
    >
      Authorizing
    </p>
    <p
      className="paragraph_fssm9cv"
    >
      Please complete the OAuth 2.0 authorization steps in the popup
    </p>
  </div>
  <WithStyles(WithStyles(ForwardRef(LinearProgress)))
    value={0}
    variant="determinate"
  />
</div>
`;

exports[`HardwareScalingStatus Runs through reshaping flow: Complete 1`] = `
<div
  className="containerPadding_f1ms73ho"
>
  <div
    className="containerSize_fjiu9nv"
  >
    <p
      className="heading_f1xburhd"
    >
      Complete
    </p>
    <p
      className="paragraph_fssm9cv"
    >
      Operation complete. Enjoy your newly configured instance!
    </p>
    <div>
      <span
        className="subheading_fgjqs4u"
      >
        Your new configuration:
      </span>
      <div
        className="paragraph_fssm9cv"
      >
        Machine type: 
        Efficient Instance, 8 vCPUs, 64 GB RAM
      </div>
      <div
        className="paragraph_fssm9cv"
      >
        GPUs: 1 NVIDIA Tesla K80
      </div>
    </div>
  </div>
  <ActionBar
    onPrimaryClick={[MockFunction]}
    primaryLabel="Close"
  />
</div>
`;

exports[`HardwareScalingStatus Runs through reshaping flow: Refreshing Session 1`] = `
<div
  className="containerPadding_f1ms73ho"
>
  <div
    className="containerSize_fjiu9nv"
  >
    <p
      className="heading_f1xburhd"
    >
      Refreshing Session
    </p>
    <p
      className="paragraph_fssm9cv"
    >
      Refreshing your JupyterLab session to reflect your new configuration.
    </p>
  </div>
  <WithStyles(WithStyles(ForwardRef(LinearProgress)))
    value={83.33333333333334}
    variant="determinate"
  />
</div>
`;

exports[`HardwareScalingStatus Runs through reshaping flow: Starting Instance 1`] = `
<div
  className="containerPadding_f1ms73ho"
>
  <div
    className="containerSize_fjiu9nv"
  >
    <p
      className="heading_f1xburhd"
    >
      Starting Instance
    </p>
    <p
      className="paragraph_fssm9cv"
    >
      Restarting your instance.
    </p>
  </div>
  <WithStyles(WithStyles(ForwardRef(LinearProgress)))
    value={66.66666666666666}
    variant="determinate"
  />
</div>
`;

exports[`HardwareScalingStatus Runs through reshaping flow: Stopping Instance 1`] = `
<div
  className="containerPadding_f1ms73ho"
>
  <div
    className="containerSize_fjiu9nv"
  >
    <p
      className="heading_f1xburhd"
    >
      Stopping Instance
    </p>
    <p
      className="paragraph_fssm9cv"
    >
      Shutting down instance for reshaping.
    </p>
  </div>
  <WithStyles(WithStyles(ForwardRef(LinearProgress)))
    value={16.666666666666664}
    variant="determinate"
  />
</div>
`;

exports[`HardwareScalingStatus Runs through reshaping flow: Updating GPU Configuration 1`] = `
<div
  className="containerPadding_f1ms73ho"
>
  <div
    className="containerSize_fjiu9nv"
  >
    <p
      className="heading_f1xburhd"
    >
      Updating GPU Configuration
    </p>
    <p
      className="paragraph_fssm9cv"
    >
      Reshaping GPU configuration to match your selection.
    </p>
  </div>
  <WithStyles(WithStyles(ForwardRef(LinearProgress)))
    value={50}
    variant="determinate"
  />
</div>
`;

exports[`HardwareScalingStatus Runs through reshaping flow: Updating Machine Configuration 1`] = `
<div
  className="containerPadding_f1ms73ho"
>
  <div
    className="containerSize_fjiu9nv"
  >
    <p
      className="heading_f1xburhd"
    >
      Updating Machine Configuration
    </p>
    <p
      className="paragraph_fssm9cv"
    >
      Reshaping machine configuration to match your selection.
    </p>
  </div>
  <WithStyles(WithStyles(ForwardRef(LinearProgress)))
    value={33.33333333333333}
    variant="determinate"
  />
</div>
`;
